Fix header size on small screens

--- a/resources/css/simple.css
+++ b/resources/css/simple.css
@@ -70,7 +70,7 @@ body>* {
 body > header {
     background: var(--accent-bg);
     color: var(--code);
-    font-size: 1.75rem;
+    font-size: min(1.75rem, 6vw);
     font-family: var(--mono-font);
     text-align: center;
     border-bottom: 10px solid var(--border);
@@ -158,9 +158,6 @@ h2:hover::after, h3:hover::after, h4:hover::after, h5:hover::after, h6:hover::af
 
   h4 {
     font-size: 1.25rem;
-  }
-    body > header {
-    font-size: 1.5rem;
   }
 }
 
